<resources>
    <string name="app_name">RestaurantApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Android</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="err_msg_enter_android_number">Digite o numero do seu Android.</string>
    <string name="err_msg_enter_android_password">Digite a senha para continuar.</string>
    <string name="order_number">Comanda</string>
    <string name="table_number">Mesa</string>
    <string name="menu">Cardápio</string>
    <string name="note">Observação:</string>
    <string name="err_msg_enter_order_number">Comanda Inválida</string>
    <string name="err_msg_enter_table_number">Número da mesa incorreto.</string>
    <string name="historic">Histórico</string>
    <string name="_1">1</string>
    <string name="err_msg_enter_order">Nenhum pedido registrado.</string>
    <string name="r_0_00">R$0.00</string>
    <string name="voc_ainda_nao_fez_pedidos">Você ainda nao fez pedidos.</string>
    <string name="search_icon">Search Icon</string>
    <string name="search_order">Pesquisar Comanda</string>
    <string name="order_card">COMANDA:</string>
</resources>